--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,18 @@
-
-# Created by https://www.toptal.com/developers/gitignore/api/macos,visualstudiocode
-# Edit at https://www.toptal.com/developers/gitignore?templates=macos,visualstudiocode
+bin
+build
+out
+.vscode/.cmaketools.json
+/*.hdr
+/*.exr
+/*.png
+/*.jpg
+.vscode/ipch/
+tests/renderings/*.png
+tests/renderings/*.hdr
+tests1/
+.vs
+testsr/
+scripts/sync_yocto.sh
 
 ### macOS ###
 # General
@@ -9,7 +21,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
