--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,4 @@ Temporary Items
 !.vscode/*.code-snippets
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,visualstudiocode
+.DS_Store
